# teamsykmelding-pik-2

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  naiserator-dev.yaml  naiserator-prod.yaml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  deploy.yml  devdeploy.yml
src/: avien_kafka.rs  environment_variables.rs  handle_client.rs  log.rs  main.rs  metrics.rs  nais_api.rs  prometheus.rs  tcp_listener.rs
src/resources/: log4rs.yaml
tests/: main_test.rs
