[package]
name = "teamsykmelding-pik-2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.215"
serde_json = "1.0.133"
serde_derive = "1.0.201"
openssl = "0.10.68"
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["ssl"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["json_encoder"] }
time = "0.3.37"
prometheus = "0.13.4"
lazy_static = "1.5.0"

[dev-dependencies]
axum-test = "15.3.1"
serde_yml = "0.0.11"
