[package]
name = "teamsykmelding-pik-2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.217"
serde_json = "1.0.138"
serde_derive = "1.0.201"
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
rdkafka = { version = "0.37.0", features = ["ssl"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
log = "0.4.25"
log4rs = { version = "1.3.0", features = ["json_encoder"] }
prometheus = "0.13.4"
lazy_static = "1.5.0"

[dev-dependencies]
axum-test = "17.2.0"
serde_yml = "0.0.12"
